--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
-  "alias": "como-fazer.wesleymends.com.br",
-  "version": 2,
-  "builds": [
-    { "src": "index.js", "use": "@now/node" }
-  ]
+  "alias": [
+    "como-fazer.wesleymends.com.br", 
+    "www.como-fazer.wesleymends.com.br"
+  ],
+  "dotenv": ".env"
 }
