--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
-  "build": {
-    "env": {
-      "DB_URL": "@my-app-db-url",
-      "DB_PASS": "@my-app-db-pass"
-    }
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "env": {
+    "DB_URL": "@como-fazer-db-url",
+    "DB_PASS": "@como-fazer-db-pass"
   }
 }
