--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "builds": [
     { "src": "index.js", "use": "@vercel/node" }
   ],
+  "routes": [
+    { "src": "/.*", "dest": "index.js" }
+  ],
   "env": {
     "DB_URL": "@como-fazer-db-url",
     "DB_PASS": "@como-fazer-db-pass"
