--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/.*", "dest": "index.js" }
+    { "src": "index.js", "use": "@vercel/node-server" }
   ],
   "env": {
     "DB_URL": "@como-fazer-db-url",
