--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,10 @@
-{ }
+{
+  "version": 2,
+  "builds": [
+    { "src": "nodejs/*.js", "use": "@vercel/node" }
+  ],
+  "env": {
+    "DB_URL": "@como-fazer-db-url",
+    "DB_PASS": "@como-fazer-db-pass"
+  }
+}
